--- a/app/src/main/res/layout/activity_giao_dien_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_giao_dien_thanh_toan.xml
@@ -14,6 +14,7 @@
         android:background="#B2DD1414"
         >
         <ImageButton
+            android:id="@+id/ibtback"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#00000000"
@@ -50,9 +51,7 @@
     <RelativeLayout
         android:id="@+id/layout_dc"
         android:layout_width="wrap_content"
-
         android:layout_height="wrap_content"
-
         android:padding="10dp"
         android:orientation="horizontal">
         <ImageView
@@ -64,24 +63,17 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-
             android:layout_marginLeft="5dp"
-
             android:layout_marginTop="2dp"
-
             android:layout_toStartOf="@+id/icon1"
             android:layout_toEndOf="@+id/icon"
             android:orientation="vertical">
 
             <TextView
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Địa chỉ nhận hàng"
                 android:textSize="18dp"
-
-
                 />
 
             <LinearLayout
@@ -118,13 +110,8 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_alignParentTop="true"
-
-
             android:layout_alignParentEnd="true"
-
             android:layout_alignParentBottom="true"
-
-
             android:src="@drawable/icon_right" />
 
     </RelativeLayout>
@@ -158,8 +145,6 @@
             android:layout_height="100dp"
             android:id="@+id/imgsanpham"
             android:layout_marginRight="8dp"
-
-
             android:src="@drawable/img_tainghe"/>
         <RelativeLayout
             android:layout_width="match_parent"
@@ -171,10 +156,8 @@
             <TextView
                 android:id="@+id/txtten"
                 android:layout_width="match_parent"
-
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-
                 android:text="Điện Thoại:Iphone 15"
                 android:textSize="20dp" />
 
@@ -183,7 +166,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/txtten"
-
                 android:text="Giá:25000000đ"
                 android:textColor="#ED2222"
                 android:textSize="20dp" />
@@ -215,14 +197,17 @@
            android:layout_height="wrap_content">
 
            <RadioButton
+               android:id="@+id/rdobt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vận chuyển bình thường ( 20000đ )"/>
            <RadioButton
+               android:id="@+id/rdonhanh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vận chuyển nhanh ( 30000đ )"/>
            <RadioButton
+               android:id="@+id/rdohoatoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vận chuyển hỏa tốc ( 50000đ )"/>
@@ -243,33 +228,40 @@
             android:textSize="18dp"
             android:gravity="center|left"
             />
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
             android:layout_marginTop="5dp"
             android:orientation="horizontal">
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Tiền giá hàng :"/>
 
             <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_gravity="end"
+
+                android:layout_toStartOf="@+id/txtgiahang"
+                android:text="đ" />
+
+            <TextView
+                android:id="@+id/txtgiahang"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_gravity="end"
-
-                android:text="đ25000000" />
+                android:text="0" />
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
-
             android:orientation="horizontal">
 
             <TextView
@@ -278,18 +270,26 @@
                 android:text="Phí vận chuyển :"/>
 
             <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_gravity="end"
+
+                android:layout_toStartOf="@+id/txtgiavc"
+                android:text="đ" />
+            <TextView
+                android:id="@+id/txtgiavc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_gravity="end"
-
-                android:text="đ25000000" />
+                android:text="0" />
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
-
             android:orientation="horizontal">
 
             <TextView
@@ -301,13 +301,23 @@
                 />
 
             <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#F10E0E"
+                android:layout_gravity="end"
+                android:textSize="18dp"
+                android:layout_toStartOf="@+id/txttienthanhtoan"
+                android:text="đ" />
+            <TextView
+                android:id="@+id/txttienthanhtoan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_gravity="end"
                 android:textSize="18dp"
                 android:textColor="#F10E0E"
-                android:text="đ25000000" />
+                android:text="25000000" />
         </RelativeLayout>
 
 
@@ -328,21 +338,46 @@
         android:orientation="horizontal"
         android:background="#EFE8E8"
         android:gravity="bottom" >
-        <TextView
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Tổng tiền:"
-            android:gravity="center|left"
-            android:paddingLeft="20dp"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:layout_weight="1"/>
+            android:orientation="horizontal"
+            android:layout_weight="1">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Tổng tiền: "
+                android:gravity="center|left"
+                android:paddingLeft="20dp"
+                android:textColor="#F60909"
+                android:textSize="20dp"
+               />
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#F10E0E"
+                android:layout_gravity="center"
+
+                android:textSize="20dp"
+                android:text="đ" />
+            <TextView
+                android:id="@+id/txttongtien_tt"
+                android:textColor="#F60909"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:textSize="20dp"/>
+        </LinearLayout>
+
 
         <TextView
+            android:id="@+id/txtdathang"
             android:layout_width="wrap_content"
             android:gravity="center"
             android:textSize="20dp"
-            android:textStyle="bold"
+
             android:padding="10dp"
             android:textColor="@color/white"
             android:background="#F11A1A"
