--- a/app/src/main/res/layout/activity_khachhang.xml
+++ b/app/src/main/res/layout/activity_khachhang.xml
@@ -30,10 +30,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="70dp">
+
         <fragment
+            class="com.example.duan1_nhom12.fragment.Fragment_home"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            class="com.example.duan1_nhom12.fragment.Fragment_home"/>
+            android:layout_height="match_parent" />
 
     </FrameLayout>
 
