--- a/app/src/main/res/layout/fragment__q_l_khach_hang.xml
+++ b/app/src/main/res/layout/fragment__q_l_khach_hang.xml
@@ -1,13 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment_quanly.fragment_QLKhachHang">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=" APP HAHSHOP"
+        android:drawableLeft="@drawable/icon_shopapp"
+        android:padding="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/backgroudmau"
+        android:textSize="18dp"/>
 
     <!-- TODO: Update blank fragment layout -->
   <androidx.recyclerview.widget.RecyclerView
+      android:layout_marginTop="70dp"
       android:id="@+id/rckhachhang"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
-</FrameLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/flthemhoadon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="20dp"
+        android:src="@drawable/icon_shopapp" />
+</RelativeLayout>
