--- a/app/src/main/res/layout/fragment__q_l_nha_cung_cap.xml
+++ b/app/src/main/res/layout/fragment__q_l_nha_cung_cap.xml
@@ -1,14 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment_quanly.fragment_QLNhaCungCap">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=" APP HAHSHOP"
+        android:drawableLeft="@drawable/icon_shopapp"
+        android:padding="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/backgroudmau"
+        android:textSize="18dp"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="70dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rcnhacc"/>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/flthemhoadon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="20dp"
+        android:src="@drawable/icon_shopapp" />
 
-</FrameLayout>
+</RelativeLayout>
