--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -104,6 +104,7 @@
                         app:cardElevation="2dp"
                         >
                         <ImageButton
+                            android:id="@+id/ibtdt"
                             android:layout_width="45dp"
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
@@ -120,6 +121,7 @@
                         app:cardElevation="2dp"
                         >
                         <ImageButton
+                            android:id="@+id/ibtlaptop"
                             android:layout_width="45dp"
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
@@ -136,6 +138,7 @@
                         app:cardElevation="2dp"
                         >
                         <ImageButton
+                            android:id="@+id/ibttainghe"
                             android:layout_width="45dp"
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
@@ -152,6 +155,7 @@
                         app:cardElevation="2dp"
                         >
                         <ImageButton
+                            android:id="@+id/ibtgame"
                             android:layout_width="45dp"
                             android:layout_height="45dp"
                             android:layout_margin="5dp"
