--- a/app/src/main/res/layout/fragment_thongbao.xml
+++ b/app/src/main/res/layout/fragment_thongbao.xml
@@ -3,43 +3,26 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+
+
+    <TextView
+        android:id="@+id/a"
         android:layout_width="match_parent"
-        android:background="@color/black"
-        android:layout_height="200dp"
-      >
+        android:layout_height="wrap_content"
+        android:text=" APP HAHSHOP"
+        android:drawableLeft="@drawable/icon_shopapp"
+        android:padding="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/backgroudmau"
+        android:textSize="18dp"/>
 
-        <!-- Nội dung của CardView -->
-        <LinearLayout
-            android:layout_width="match_parent"
-           android:background="@drawable/img3"
-            android:layout_height="match_parent">
-
-
-        </LinearLayout>
-
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcthongbao"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_marginTop="20dp"
-        app:cardCornerRadius="20dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_height="wrap_content">
-
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/searchView"
-
-            android:background="@drawable/tk_khung"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            />
-
-    </androidx.cardview.widget.CardView>
+        android:layout_height="match_parent"
+        android:layout_below="@+id/a"
+        />
 
 
 </RelativeLayout>
